// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiFacetButton testClass1 testClass2 css-j768lo-euiButtonDisplay-s-euiFacetButton"
  data-test-subj="test subject string"
  title="aria-label"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props icon is rendered 1`] = `
<button
  class="euiFacetButton css-j768lo-euiButtonDisplay-s-euiFacetButton"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__icon css-16myiw4-euiFacetButton__icon"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isDisabled is rendered 1`] = `
<button
  class="euiFacetButton css-oucngn-euiButtonDisplay-s-isDisabled-euiFacetButton"
  disabled=""
>
  <span
    class="css-11j2vy4-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__icon css-ypd0ba-euiFacetButton__icon-isDisabled"
      color="success"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity css-scrf43-euiFacetButton__quantity-isDisabled"
    >
      6
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isLoading is rendered 1`] = `
<button
  class="euiFacetButton css-oucngn-euiButtonDisplay-s-isDisabled-euiFacetButton"
  disabled=""
>
  <span
    class="css-11j2vy4-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner css-1y2hncs-euiLoadingSpinner-m-euiFacetButton__loadingSpinner"
      role="progressbar"
    />
  </span>
</button>
`;

exports[`EuiFacetButton props isSelected is rendered 1`] = `
<button
  class="euiFacetButton css-j768lo-euiButtonDisplay-s-euiFacetButton"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-2t71nd-euiFacetButton__text-isSelected"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props quantity is rendered 1`] = `
<button
  class="euiFacetButton css-j768lo-euiButtonDisplay-s-euiFacetButton"
>
  <span
    class="css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-15kc18g-euiFacetButton__text-unSelected"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity css-1cz0qrb-euiFacetButton__quantity"
    >
      60
    </span>
  </span>
</button>
`;
